fixed overflow bug on mobile

--- a/app/App.scss
+++ b/app/App.scss
@@ -40,6 +40,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  overflow: hidden;
 
   padding: 6rem 0 ;
   @media screen and (min-width:1200px){
