--- a/components/Experience/Experience.scss
+++ b/components/Experience/Experience.scss
@@ -62,3 +62,7 @@
         }
     }
 }
+
+.work-div{
+    width: 100%;
+}
